# MidnightCommander

./: .gitignore  Makefile.am  README  _run_test.sh  autogen.sh  config.sh  configure.ac  git.config  run-test-1514_right_margin_fix  run-test-1585_slow_viewer  run-test-1775_mvfs_9P  run-test-1775_mvfs_9P_2  run-test-1780_remove_errno_decl  run-test-1812_various_cleanups  run-test-1818_refactoring_no_vfs  run-test-1823_prev_line_def  run-test-1828_ftpfs_improved_symlink_handling  run-test-1866_filesystem_reorganization  run-test-1872-build-fixups  run-test-1897_libc_return_values  run-test-1925_mcserver_conditional  run-test-1930_fix_missing_fs_h  run-test-1935_edit_lock_fix  run-test-1945_editor_mark_all  run-test-1955_edit_symlink  run-test-1960_fix_missing_printf_format  run-test-262_remove_putenv  run-test-METUX.approved  run-test-METUX.hacking  run-test-METUX.mvfs  run-test-master  update-repo
doc/: HACKING
doc/man/: mc.1.in
doc/man/es/: mc.1.in
doc/man/hu/: mc.1.in
doc/man/it/: mc.1.in
doc/man/pl/: mc.1.in
doc/man/ru/: mc.1.in
doc/man/sr/: mc.1.in
edit/: edit-impl.h  edit.c  editcmd.c
lib/: keybind.c  keybind.h  util.c  util.h  widget.h
lib/skin/: colors-old.c
lib/tty/: key.c  key.h
lib/vfs/mc-vfs/: Makefile.am  vfs-impl.h  vfs.c  xdirentry.h
lib/vfs/mc-vfs/extfs/: Makefile.am  README.extfs  tarlist-files-include.am  utar.in
lib/vfs/mc-vfs/extfs/tarlist/: .gitignore  Makefile.am  acinclude.m4  configure.ac
lib/vfs/mc-vfs/extfs/tarlist/gnu/: Makefile.am
lib/vfs/mc-vfs/extfs/tarlist/lib/: Makefile.am  paxerror.c  paxexit.c  paxlib.h  paxnames.c  rmt.h  system.h
lib/vfs/mc-vfs/extfs/tarlist/m4.gnu/: 00gnulib.m4  gnulib-comp.m4
lib/vfs/mc-vfs/extfs/tarlist/po/: .gitignore  POTFILES.in  bg.po  cs.po  da.po  de.po  el.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  ky.po  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
lib/vfs/mc-vfs/extfs/tarlist/src/: Makefile.am  buffer.c  common.h  exit.c  list.c  misc.c  sparse.c  system.c  tar.c  transform.c  utf8.c  warning.c  xheader.c
lib/widget/: history.c  history.h  input.c  menu.c  menu.h
m4.include/: mc-version.m4  mc-vfs.m4
m4.include/vfs/: mc-vfs-tarfs.m4
misc/: mc.ext.in  mc.keymap.default  mc.keymap.emacs
misc/ext.d/: misc.sh.in
opts/: 1775_mvfs_9P.full.opt  1775_mvfs_9P.minimal.opt  full.opt  master-full.opt  minimal.opt  no-edit.opt  no-nls.opt  vfstest.no-vfs.opt  vfstest.only-cpio.opt  vfstest.only-extfs.opt  vfstest.only-fish.opt  vfstest.only-ftp.opt  vfstest.only-mcfs.opt  vfstest.only-mcserver.opt  vfstest.only-mvfs-9p.opt  vfstest.only-sfs.opt  vfstest.only-smbfs.opt  vfstest.only-tar.opt  vfstest.only-undelfs.opt
po/: ru.po
src/: Makefile.am  args.c  boxes.c  cdburn.c  cdburn.h  cmddef.h  fileloc.h  find.c  keybind-defaults.c  keybind-defaults.h  keybind.c  main.c  mcburn.c  mcburn.h  panelize.c  prompt.c  setup.c  subshell.c  subshell.h  subshell_sync_command.c  subshell_sync_command.h  textconf.c  widget.c  widget.h  wtools.c
src/editor/: Makefile.am  edit-impl.h  edit.c  edit.h  editcmd.c  editcmd_dialogs.c  editdraw.c  editoptions.c  editwidget.c  editwidget.h  xml-tag.c  xml-tag.h
src/filemanager/: chown.c  file.c  filegui.c  info.c  midnight.c  panel.c
src/vfs/extfs/helpers/: Makefile.am  torrent
src/vfs/sftpfs/: dir.c  file.c  internal.c
src/viewer/: display.c
tests/src/: Makefile.am
tests/src/editor/: Makefile.am  test-data.xml.in  xmltag.c
